v1.1.3	(Feb xx, 2006)

	* Broken feed editor fixed
	* Compatibility layer for mb_* functions

v1.1.2	(Jan 20, 2006)

	* Support for feeds linked together
	* Various SQL optimizations
	* Integrated browser for registered feeds
	* Interface fixes and cleanups

v1.1.1	(Dec 26, 2005)

	* Various XML export/import fixes
	* Add filter action on frontpage
	* Optional login via SSL
	* Adaptive view mode
	* Combined feed display
	* Collapsable categories in feedlist
	* HTTP Basic authentication support for reading protected feeds 
	* Various MSIE compatibility fixes/workarounds

v1.1.p2	(Dec 07, 2005)

	* Fix schema_version handling in xml-import.php

v1.1.p1	(Dec 07, 2005)

	* Fix session handling in xml-import.php

v1.1		(Dec 07, 2005)

	! Please read UPGRADING for upgrade instructions from version 1.0.7 !

	* Multi-user support (yay!)
	* Per-feed purge preferences (0 means default, negative numbers disable purging)
	* Reworked compact stylesheet support
	* Interactive user preferences editor
	* Per-feed content filters
	* Support for user stylesheets
	* Feed categories
	* "Mark as read" for tags
	* Test button in label editor
	* Show number of unread articles in title
	
v1.0.7	(Nov 14, 2005)

	- Implemented catchup (e.g. mark as read) for labels and Starred feed
	- Several new view modes and interface tweaks
	- Label editor now has popup help
	- Reworked preferences editor once again
	- Several bugfixes for issues reported since 1.0.6

v1.0.6	(Oct 13, 2005)

	- Miscellaneous bugfixes since 1.0.5.1, including fairly serious
	  mysql schema bug.

v1.0.5.1	(Sep 24, 2005)

	- Fixes MySQL schema bug of 1.0.5.

v1.0.5	(Sep 23, 2005)

	- Fixes several issues reported since 1.0.4.

v1.0.4	(Sep 12, 2005)

	- "Starred items" virtual feed
	- Experimental support for Gmail-like labels
	- Basic support for Technorati-style tags

v1.0.3.1 (Sep 07, 2005)

	- Last minute bugfixes for 1.0.3

v1.0.3 (Sep 07, 2005)

	- OPML export/import