@@ -2,6 +2,7 @@ v1.1.3	(Feb xx, 2006)
 
 	* Broken feed editor fixed
 	* Compatibility layer for mb_* functions
+	* Experimental server-side update daemon for asynchronous operation
 
 v1.1.2	(Jan 20, 2006)
 
